feat: TF-IDF 스코어링 기반 도장 검색 랭킹 구현
- IndexField(NAME=3.0, ADDRESS=1.5, OWNER=1.0) 필드 가중치 도입
- TokenEntry로 역인덱스를 토큰 → (도장ID, 필드, 매칭방식) 구조로 변경
- fieldBoost × matchScore × IDF 공식으로 검색 결과 관련도 순 정렬
- 검색 로직을 findCandidateIds, calculateScores로 분리